--- a/src/main/webapp/resources/css/index.css
+++ b/src/main/webapp/resources/css/index.css
@@ -26,13 +26,13 @@ h1 {
     clear: both;
 }
 
-.items {
+.cars {
     display: inline-block;
     min-height: 100%;
     margin: 20px 100px 40px;
 }
 
-.item {
+.car {
     background-color: rgba(238, 229, 20, 0.72);
     float: left;
     margin: 0 10px 10px 0;
@@ -41,9 +41,11 @@ h1 {
     height: 380px;
 }
 
-.item img {
+.car img {
     display: block;
     margin: auto;
+    max-height: 130px;
+    max-width: 280px;
 }
 
 h2 {
