--- a/src/main/webapp/resources/css/index.css
+++ b/src/main/webapp/resources/css/index.css
@@ -48,6 +48,13 @@ h1 {
     max-width: 280px;
 }
 
+.table img {
+    display: block;
+    margin: auto;
+    max-height: 130px;
+    max-width: 280px;
+}
+
 h2 {
     font-size: 16px;
     display: block;
